# 40k-index-pdf-extractor

./: 40k_index_pdf_extractor.py  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-test-pypi.yml
src/: 40k_index_pdf_extractor.py  __main__.py  py40kie.py
